--- a/assets/scss/components/_home.scss
+++ b/assets/scss/components/_home.scss
@@ -1,1 +1,48 @@
 /*=============== HOME ===============*/
+.home {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    &__color{
+        background-color: var(--purple-light);
+        width: 50%;
+        height: 100vh;
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: -9;
+    }
+    &__logo {
+        img {
+            max-width: 300px;
+        }
+    }
+    &__video {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        z-index: -10;
+        background-size: cover;
+    }
+    &__more{
+        position: absolute;
+        bottom: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        i{
+            margin-top: 10px;
+            font-size: 2rem;
+        }
+    }
+
+}
