--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -16,4 +16,6 @@
 @import 'components/_home';
 @import 'components/_mediaqueries';
 @import 'components/_scroll';
+@import 'components/_button';
+
 
