--- a/assets/scss/components/_about.scss
+++ b/assets/scss/components/_about.scss
@@ -1,1 +1,31 @@
 /*=============== ABOUT ===============*/
+.about{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    &__logo-title{
+        display: flex;
+        padding-top: 150px;
+    }
+    &__logo{       
+        margin-left: 240px;
+        display: flex;
+        width: 115px;
+        height: 200px;
+    }
+    &__title{
+        font-size: 2.5rem;
+        align-items: center;
+        display: flex;
+        margin-left: 100px;
+    }
+    &__text{
+        font-size: 1.5rem;
+        text-align: justify;
+        padding: 100px 240px 150px 240px;
+    }
+    
+}
