--- a/assets/scss/components/_experience.scss
+++ b/assets/scss/components/_experience.scss
@@ -1,1 +1,30 @@
-/*=============== APP ===============*/
+/*=============== EXPERIENCE ===============*/
+.experience{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--blue-light);    
+    &__skills{
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: column;
+    }
+    &__data{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        h3{
+            z-index: 2;
+            position: relative;
+            font-size: 6rem;
+            font-weight: bold;         
+        }
+        p{
+            max-width: 500px;
+        }
+    }
+}
