--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,1 +1,11 @@
 /*=============== FOOTER ===============*/
+.footer{
+    padding: 50px 0;
+    background-color: var(--black);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img{
+        max-width: 150px;
+    }
+}
